--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,28 @@
-
-  {
-    "version": 2,
-    "builds": [
-     {
+{
+  "version": 2,
+  "builds": [
+    {
       "src": "index.js",
       "use": "@vercel/node",
       "config": { "includeFiles": ["dist/**"] }
-     }
-    ],
-    "routes": [
-     {
+    }
+  ],
+  "routes": [
+    {
       "src": "/(.*)",
-      "dest": "index.js"
-     }
-    ]
-   }
+      "dest": "index.js",
+      "methods": ["GET", "POST", "OPTIONS"]  
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://portfolio-frontend-beta-seven.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
+  ]
+}
