--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,14 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "index.js",
-      "methods": ["GET", "POST", "OPTIONS"]  
+      "methods": ["GET", "POST", "OPTIONS"]
     }
   ],
   "headers": [
@@ -20,8 +19,7 @@
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "https://portfolio-frontend-beta-seven.vercel.app" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
       ]
     }
   ]
