--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 # MONGO_URI=mongodb://localhost:27017/myportfolio
 MONGO_URI=mongodb://mongo:DsTAGYYwxJBGoDzFVbgImTeyTEVCjyFZ@yamanote.proxy.rlwy.net:52625/myportfolio?authSource=admin
-EMAIL_USER=ritik841207@gmail.com
-EMAIL_PASS=ixhu osjt icng emid 
+# EMAIL_USER=ritik841207@gmail.com
+# EMAIL_PASS=ixhu osjt icng emid 
+EMAIL_USER=ritik.webdevlper@gmail.com
+EMAIL_PASS=nfjv khtd ipih bjmv
