Updated index.js and .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MONGO_URI=mongodb://localhost:27017/myportfolio
-MONGO_URI=mongodb://mongo:DsTAGYYwxJBGoDzFVbgImTeyTEVCjyFZ@yamanote.proxy.rlwy.net:52625/myportfolio?authSource=admin
+MONGO_URI=mongodb+srv://ritik:ritik@cluster0.xawraow.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 EMAIL_USER=ritik.webdevlper@gmail.com
 EMAIL_PASS=nfjv khtd ipih bjmv
